# ros_work

./: README.md  README_Task_one.md
Grab_pkg/: CMakeLists.txt  package.xml
Grab_pkg/src/: Grab.cpp
ar_tf_arm_5_pkg/: CMakeLists.txt  package.xml
ar_tf_arm_5_pkg/src/: ar_tf_5.cpp
arm_control_pkg/: CMakeLists.txt  package.xml
arm_control_pkg/src/: arm_control.cpp
auto_bkhome_pkg/: CMakeLists.txt  package.xml
auto_bkhome_pkg/src/: auto_bkhome.cpp
auto_charge_pkg/: CMakeLists.txt  package.xml
auto_charge_pkg/src/: auto_charge.cpp
auto_nav_goal_4_pkg/: CMakeLists.txt  package.xml
auto_nav_goal_4_pkg/src/: auto_nav_goal_4.cpp
auto_nav_goal_5_pkg/: CMakeLists.txt  package.xml
auto_nav_goal_5_pkg/src/: auto_nav_goal_5.cpp
nav_goal_pkg/: CMakeLists.txt  package.xml
nav_goal_pkg/src/: nav_goal.cpp
romove_pkg/: CMakeLists.txt  package.xml
romove_pkg/src/: romove_node.cpp
state_machine_pkg/: CMakeLists.txt  package.xml
state_machine_pkg/include/state_machine_pkg/: state_machine.h
state_machine_pkg/launch/: state_machine.launch
state_machine_pkg/src/: main.cpp  state_machine.cpp
state_machine_pkg/test/: test_state_machine.cpp
