<?xml version="1.0"?>
<package format="2">
  <name>state_machine_pkg</name>
  <version>0.0.1</version>
  <description>工业组省赛任务一顺序执行状态机</description>
  <maintainer email="reicom2025@todo.todo">reicom2025</maintainer>
  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_srvs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>move_base_msgs</build_depend>
  <build_depend>ar_pose</build_depend>
  <build_depend>arm_controller</build_depend>
  <build_depend>relative_move</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_srvs</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>actionlib</build_export_depend>
  <build_export_depend>move_base_msgs</build_export_depend>
  <build_export_depend>ar_pose</build_export_depend>
  <build_export_depend>arm_controller</build_export_depend>
  <build_export_depend>relative_move</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_srvs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>actionlib</exec_depend>
  <exec_depend>move_base_msgs</exec_depend>
  <exec_depend>ar_pose</exec_depend>
  <exec_depend>arm_controller</exec_depend>
  <exec_depend>relative_move</exec_depend>
</package>
